fix: css - artist tag whitespace wrapping set to nowrap

--- a/src/styles/components/_artist-tag.scss
+++ b/src/styles/components/_artist-tag.scss
@@ -5,6 +5,7 @@
   background-color: c.$box-black;
   border-radius: 1000px;
   padding: 12px;
+	gap: 10px;
   cursor: pointer;
 	width: min-content;
 	height: min-content;
@@ -19,7 +20,6 @@
 }
 
 .artist-tag__handles {
-  margin-left: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -31,6 +31,7 @@
   font-size: 14px;
   line-height: 17px;
   color: #ffffff;
+	white-space: nowrap;
 }
 
 .artist-tag__username {
@@ -41,4 +42,5 @@
   /* identical to box height, or 131% */
   /* Grey-60 */
   color: rgba(196, 196, 196, 0.6);
+	white-space: nowrap;
 }
